rename SNT page to "History", make SNT headlines conistent

--- a/docs/Meetings/snt2004.md
+++ b/docs/Meetings/snt2004.md
@@ -1,4 +1,4 @@
-# Studentennetztreffen 2004
+# SNT 2004, Chemnitz
 
 Das erste Studentennetztreffen fand vom 5. bis 7. März 2004 in Chemnitz
 statt.
