--- a/docs/Meetings/snt2005.md
+++ b/docs/Meetings/snt2005.md
@@ -1,4 +1,4 @@
-# Studentennetztreffen 2005
+# SNT 2005, Ilmenau
 
 ![:snt:logo_snt_2005_ilmenau.png](/snt/logo_snt_2005_ilmenau.png)\
 Vom 03.06. bis zum 05.06.2005 fand in Ilmenau das 2.
