--- a/docs/Meetings/snt2006.md
+++ b/docs/Meetings/snt2006.md
@@ -1,4 +1,4 @@
-# Studentennetztreffen 2006
+# SNT 2006, Braunschweig
 
 ![:snt:logo_snt_2006_braunschweig.png](/snt/logo_snt_2006_braunschweig.png)\
 Vom 7.7. bis zum 9.7. 2006 wird in Braunschweig das StudentenNetzTreffen
