--- a/docs/Meetings/snt2007.md
+++ b/docs/Meetings/snt2007.md
@@ -1,4 +1,4 @@
-# Studentennetztreffen 2007
+# SNT 2007, Mittweida
 
 ![:snt:logo_snt_2007_mittweida.gif](/snt/logo_snt_2007_mittweida.gif)\
 Vom 13. - 15.7.2007 findet in Mittweida das 4. StudentenNetzTreffen
