--- a/docs/Meetings/snt2016.md
+++ b/docs/Meetings/snt2016.md
@@ -1,4 +1,4 @@
-# Studentennetztreffen 2016
+# SNT 2016, Dresden
 
 ![logo_snt_2016_dresden.png](/snt/logo_snt_2016_dresden.png){width="350"
 query="?350"}
