--- a/docs/Meetings/snt2019.md
+++ b/docs/Meetings/snt2019.md
@@ -1,4 +1,4 @@
-# Studentennetztreffen 2019
+# SNT 2019, Bratislava
 
 You can find the announcement email
 [here](https://portal.ynet.sk/files/snt_19_announcment/snt_19_announcment.html)
