--- a/docs/Meetings/snt2008.md
+++ b/docs/Meetings/snt2008.md
@@ -1,4 +1,4 @@
-# SNT 2008, Tübingen (canceled)
+# SNT 2008, Tübingen (cancelled)
 
 ![:snt:logo_snt_2008.png](/snt/logo_snt_2008.png) ( ~~noch~~ nicht mehr
 zu erstellen)\
