--- a/docs/Meetings/snt2004.md
+++ b/docs/Meetings/snt2004.md
@@ -3,17 +3,9 @@
 Das erste Studentennetztreffen fand vom 5. bis 7. März 2004 in Chemnitz
 statt.
 
-### Teilnehmer
+## Teilnehmer
 
-     * [[studnetze:csn|Chemnitzer StudentenNetz]]
-     * [[studnetze:fem|Forschungsgemeinschaft elektronische Medien]]
-     * [[studnetze:mcn|Mitweidaer CampusNet]]
-     * [[studnetze:sfg|StuNet Freiberg]]
-
-### Zeitplan
-
-##### Freitag
-
-##### Samstag
-
-##### Sonntag
+* [Chemnitzer StudentenNetz](../Networks/chemnitz_csn.md)
+* [Forschungsgemeinschaft elektronische Medien](../Networks/ilmenau_fem.md)
+* [Mitweidaer CampusNet](../Networks/mitweida_mcn.md)
+* [StuNet Freiberg](../Networks/freiberg_sfg.md)
