--- a/docs/Meetings/snt2005.md
+++ b/docs/Meetings/snt2005.md
@@ -1,10 +1,9 @@
 # SNT 2005, Ilmenau
 
-![:snt:logo_snt_2005_ilmenau.png](/snt/logo_snt_2005_ilmenau.png)\
 Vom 03.06. bis zum 05.06.2005 fand in Ilmenau das 2.
 StudentenNetzTreffen statt.
 
-### Teilnehmer
+## Teilnehmer
 
 -   Forschungsgemeinschaft elektronische Medien e.V., Ilmenau
 -   Mittweidaer CampusNet, Mittweida
@@ -14,16 +13,16 @@ StudentenNetzTreffen statt.
 -   ATekoN e.V., Braunschweig
 -   Studentennetz TU-Clausthal, Clausthal
 
-### Zeitplan
+## Zeitplan
 
-##### Freitag
+### Freitag
 
 -   Ankunft ab 17:00 Uhr
 -   Check-In im FeM-Office
 -   Empfang, Kennenlernen und gemütliches Beisammensein im BH-Club
 -   20:00 Abendessen
 
-##### Samstag
+### Samstag
 
 -   09:00 Uhr Offizielle Begrüßung
 -   anschliessend: Kurze Vorstellung einzelner Studentennetze - Teil 1
@@ -42,7 +41,7 @@ StudentenNetzTreffen statt.
     1.  Zeit und Raum für Diskussionen
     2.  Socialising
 
-##### Sonntag
+### Sonntag
 
 -   09:00 Uhr Traffik, Traffikerzeugung, Traffikvermeidung und
     Accounting
@@ -53,9 +52,3 @@ StudentenNetzTreffen statt.
     e.V.)
 -   12:15 Uhr Mittagspause
 -   Ausklang des Treffens
-
-------------------------------------------------------------------------
-
-### Bildergalerie
-
-![2005](/gallery>snt/2005)
