--- a/docs/Meetings/snt2006.md
+++ b/docs/Meetings/snt2006.md
@@ -1,13 +1,14 @@
 # SNT 2006, Braunschweig
 
-![:snt:logo_snt_2006_braunschweig.png](/snt/logo_snt_2006_braunschweig.png)\
+![snt2006.png](snt2006.png)
+
 Vom 7.7. bis zum 9.7. 2006 wird in Braunschweig das StudentenNetzTreffen
 stattfinden.
 
 Anmeldung zur Mailingliste:
 <https://mail.atekon.de/mailman/listinfo/snt>
 
-### Teilnehmer
+## Teilnehmer
 
 -   [Forschungsgemeinschaft elektronische Medien e.V.,
     Ilmenau](/studnetze/fem) (3 Teilnehmer)
@@ -23,9 +24,9 @@ Anmeldung zur Mailingliste:
 -   SielNet e.V., Braunschweig (2 Teilnehmer)
 -   Wohnheimsnetze Clausthal (3 Teilnehmer)
 
-### Zeitplan
+## Zeitplan
 
-##### Freitag
+### Freitag
 
 -   16:00-17:00 Ankunft im Monkey Island
 -   17:00 (oder später, jenachdem wieviele schon da sind) Begehung der
@@ -33,7 +34,7 @@ Anmeldung zur Mailingliste:
 -   Danach kennenlernen
 -   20:00 Abendessen
 
-##### Samstag
+### Samstag
 
 -   7:30 Aufstehen, duschen
 -   8:30 Frühstück
@@ -57,7 +58,7 @@ Anmeldung zur Mailingliste:
 -   20:00 Abendessen
 -   21:00 WM 3.Platz (.de / .pt)
 
-##### Sonntag
+### Sonntag
 
 -   7:30 Aufstehen, duschen
 -   8:30 Frühstück
@@ -69,39 +70,14 @@ Anmeldung zur Mailingliste:
 
 ------------------------------------------------------------------------
 
-### Pressemitteilung zum 3. Studentennetztreffen
+## Pressemitteilung zum 3. Studentennetztreffen
+### Mitglieder der Studentennetze aus Hochschulstädten reisten nach Braunschweig zum dritten Studentennetztreffen
 
-#### \"Monkey Island\" - Fortsetzung folgt
+Vom 6. bis 8. Juli 2006 kamen Mitglieder der Studentennetze aus Chemnitz, Hamburg, Ilmenau, Braunschweig und anderen deutschen Städten in Braunschweig zum dritten Studentennetztreffen (SNT) zusammen, um Erfahrungen auszutauschen und Entwicklungen zu erläutern. Nachdem die Studentennetz-Akteure  am Freitagabend zunächst im "Monkey Island", einem Studentenclub im Wohnheim "Affenfelsen", lockere Gespräche führten, stand der Samstag ganz im Zeichen der Netzwerkarbeit.
 
-##### Mitglieder der Studentennetze aus Hochschulstädten reisten nach Braunschweig zum dritten Studentennetztreffen
-
-`
- <table width="300" border="0" cellpadding="2" cellspacing="2" align="right">
-  <tr>
-   <td>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   </td>
-   <td valign="bottom"><img src="/lib/exe/fetch.php?cache=&media=snt:2006:2852.jpg" width="300" vspace="0" hspace="0" alt="*">
-   </td>
-  </tr>
-  <tr>
-   <td>
-   </td>
-   <td valign="top">
-    <p class="klein">Teilnehmer des Studentennetztreffens in Braunschweig.<br />Foto: SNT</p>
-   </td>
-  </tr>
-</table>
-Vom 6. bis 8. Juli 2006 kamen Mitglieder der Studentennetze aus Chemnitz, Hamburg, Ilmenau, Braunschweig und anderen deutschen Städten in Braunschweig zum dritten Studentennetztreffen (SNT) zusammen, um Erfahrungen auszutauschen und Entwicklungen zu erläutern. Nachdem die Studentennetz-Akteure  am Freitagabend zunächst im "Monkey Island", einem Studentenclub im Wohnheim "Affenfelsen", lockere Gespräche führten, stand der Samstag ganz im Zeichen der Netzwerkarbeit.<br />
-<br />
 Nach der Vorstellung der lokalen Gruppen mit Aussagen zu Nutzerzahlen, technischer Realisierung und aktuellen Anliegen folgten Diskussionen zu Themen wie Öffentlichkeitsarbeit, Sicherheit oder rechtlichen Belangen. Als größeres Problem kristallisierte sich dabei, vor allem bei den etablierten Studentennetzen, der Nachfolgermangel heraus. Besonders im Hinblick auf kommende Studiengebühren bereitete dieser Sachverhalt Sorgen, da die Arbeit in den studentischen Initiativen auf freiwilliger Basis erfolgt. Befürchtet wird, dass die Studiengebühren dazu führen, dass der Student, um sein Studium möglichst schnell und damit ohne größere Kosten abzuschließen, sein Engagement außerhalb des Studiums einschränken wird. In Fachvorträgen wurden verschiedene Lösungen von Studentennetzen zu Gebieten wie VoIP oder Netzwerkmonitoring vorgestellt und diskutiert. Den Samstagabend ließen die
-Teilnehmer wieder im "Monkey Island" ausklingen. <br />
-<br />
-Der Sonntagvormittag gehörte noch einmal dem Erfahrungsaustausch sowie dem Sammeln von Meinungen zur Schaffung einer gemeinsamen Interessenvertretung der Studentischen Netze. Beendet wurde das SNT mit einem Grillen auf der Dachterrasse des "Affenfelsens" und dem Plan, sich im kommenden Jahr erneut zu treffen.<br />
-<br />
-(Autorin: Antje Schubert) </p><span>17.07.2006</span>
-`{=html}
+Teilnehmer wieder im "Monkey Island" ausklingen.
 
-### Bildergalerie
+Der Sonntagvormittag gehörte noch einmal dem Erfahrungsaustausch sowie dem Sammeln von Meinungen zur Schaffung einer gemeinsamen Interessenvertretung der Studentischen Netze. Beendet wurde das SNT mit einem Grillen auf der Dachterrasse des "Affenfelsens" und dem Plan, sich im kommenden Jahr erneut zu treffen.
 
-![2006](/gallery>snt/2006)
+(Antje Schubert, 17.07.2006)
