--- a/docs/Meetings/snt2007.md
+++ b/docs/Meetings/snt2007.md
@@ -1,90 +1,77 @@
 # SNT 2007, Mittweida
 
-![:snt:logo_snt_2007_mittweida.gif](/snt/logo_snt_2007_mittweida.gif)\
+![snt2007.gif](snt2007.gif)
+
 Vom 13. - 15.7.2007 findet in Mittweida das 4. StudentenNetzTreffen
 statt.
 
-### Anfahrtsplan
+## Teilnehmer
+|                                                                                               | evtl. | fest +ÜN | fest -ÜN |
+| --------------------------------------------------------------------------------------------- | ----- | -------- | -------- |
+| [Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md)                        | 0     | 1        | 5        |
+| [Chemnitzer StudentenNetz (CSN), Chemnitz](../Networks/chemnitz_csn.md)                       | 0     | 3        | 0        |
+| [Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](../Networks/ilmenau_fem.md) | 0     | 2        | 0        |
+| [ATekoN e.V., Braunschweig](../Networks/braunschweig_atekon.md)                               | 0     | 3        | 0        |
+| [SielNet e.V., Braunschweig](../Networks/braunschweig_sielnet.md)                             | 0     | 3        | 0        |
+| [Sybuca GmbH, Hamburg](../Networks/hamburg_sybuca.md)                                         | 0     | 1        | 0        |
+| [StuWoNet Wiesenhof, Wilhelmshaven](../Networks/wilhelmshaven_stuwonet.md)                    | 0     | 3        | 0        |
+| [Arbeitskreis Netzwerke STW Tübingen AdöR, Tübingen](../Networks/tuebingen_netzak.md)         | 0     | 4        | 0        |
+|                                                                                               | 0     | 20       | 5        |
 
-  -------------------------- ---------------------------------------------------------------------------- -------------------------------------------------
-   Westen und Süden über A4   ![Westen und Süden über A4](/snt/2007/a4_west.gif){width="25" query="?25"}  ![:snt:2007:a4_west.pdf](/snt/2007/a4_west.pdf)
-        Osten über A4               ![Osten über A4](/snt/2007/a4_ost.gif){width="25" query="?25"}        ![:snt:2007:a4_ost.pdf](/snt/2007/a4_ost.pdf)
-       Norden über A14              ![Norden über A14](/snt/2007/a14.gif){width="25" query="?25"}         ![:snt:2007:a14.pdf](/snt/2007/a14.pdf)
-           per Bahn              ![Mittweida Bahnhof](/snt/2007/bahnhof.gif){width="25" query="?25"}      ![:snt:2007:bahnhof.pdf](/snt/2007/bahnhof.pdf)
-  -------------------------- ---------------------------------------------------------------------------- -------------------------------------------------
+evtl.     Teilnahme mit X Personen geplant
 
-### Teilnehmer
+fest +ÜN  Teilnahme mit X Personen inkl. JH-Übernachtung (je 28,60EUR pro Person) bestätigt
 
-  ----------------------------------------------------------------------------------- ------- ---------- ----------
-                                                                                      evtl.   fest +ÜN   fest -ÜN
-               [Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)               0       1          5
-              [Chemnitzer StudentenNetz (CSN), Chemnitz](/studnetze/Csn)              0       3          0
-   [Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](/studnetze/fem)  0       2          0
-                    [ATekoN e.V., Braunschweig](/studnetze/atekon)                    0       3          0
-                              SielNet e.V., Braunschweig                              0       3          0
-                       [Sybuca GmbH, Hamburg](/studnetze/sybuca)                      0       1          0
-                           StuWoNet Wiesenhof, Wilhelmshaven                          0       3          0
-                  Arbeitskreis Netzwerke STW Tübingen AdöR, Tübingen                  0       4          0
-                                                                                      0       20         5
-  ----------------------------------------------------------------------------------- ------- ---------- ----------
+fest -ÜN  Teilnahme mit X Personen ohne Übernachtung bestätigt
 
-    evtl.     Teilnahme mit X Personen geplant
-    fest +ÜN  Teilnahme mit X Personen inkl. JH-Übernachtung (je 28,60EUR pro Person) bestätigt
-    fest -ÜN  Teilnahme mit X Personen ohne Übernachtung bestätigt
-
-### Vorträge
+## Vorträge
 
 Folgende Vorträge sind bearbeitet:
 
-    ~ Klärung rechtlicher Fragen bzw. rechtliche Bewertung konkret
-      aufgetretener Fälle mit Polizei & Staatsanwaltschaft,
-      RA Kanzlei aus Chemnitz
-    ~ Ausführungen des sächsischen Landesdatenschutzamtes zu verschiedenen
-      Punkten (Nutzerdaten für Verwaltung, Umgang mit Logfiles...) 
-      am Beispiel des MCN
+  - Klärung rechtlicher Fragen bzw. rechtliche Bewertung konkret
+    aufgetretener Fälle mit Polizei & Staatsanwaltschaft,
+    RA Kanzlei aus Chemnitz
+  - Ausführungen des sächsischen Landesdatenschutzamtes zu verschiedenen
+    Punkten (Nutzerdaten für Verwaltung, Umgang mit Logfiles...) 
+    am Beispiel des MCN
 
 Folgenden Themen sind teilweise bearbeitet:
 
-    ~ kleine Vorstellung der "Verwaltungssoftware" einzelner Netze
+  - kleine Vorstellung der "Verwaltungssoftware" einzelner Netze
 
 Diese Vortragsthemen sind noch offen und ohne Moderator:
 
-    ~ Umgang mit immer mehr ungesicherten WLANs im Wohnheim
-    ~ Vorstellung und Erfahrungsbewertung von Trouble-Ticketsystemen
-    ~ Netzwerkmonitoring (Sicherheit)<-> Usertracking (Überwachungstendenz)
-    ~ Nutzermotivation, Auswirkung verkürzter Studiengänge (Bachelor)
-      und Studiengebühren auf studentische Mitarbeit
+  - Umgang mit immer mehr ungesicherten WLANs im Wohnheim
+  - Vorstellung und Erfahrungsbewertung von Trouble-Ticketsystemen
+  - Netzwerkmonitoring (Sicherheit)<-> Usertracking (Überwachungstendenz)
+  - Nutzermotivation, Auswirkung verkürzter Studiengänge (Bachelor)
+    und Studiengebühren auf studentische Mitarbeit
 
-Es wäre gut, wenn sich zu den offenen Themen jeweils noch ein Moderator
-findet und alle anderen schon etwas zuarbeiten. Solltet ihr weitere
-Ideen oder Themenwünsche haben, so schreibt diese ins Wiki:
-**-\>[Diskussionen](/talk/SNT/SNT2007)**\
-
-### Zeitplan
+## Zeitplan
 
 Folgender Ablauf ist geplant:
 
-    Freitag: - Ankunft am Nachmittag (13.7.), Kennenlernen / Wiedersehen
-             - gegen 2300 Abfahrt zur Übernachtung in die JH Falkenhain
+Freitag:
 
-    Samstag: - Übernachter frühstücken in der JH, danach Abfahrt zur Uni
-             - Vormittag: kurze Vorstellung der teilnehmenden Netze
-               und Beginn der Vorträge/Workshops
-             - Mittagessen
-             - Nachmittag: Vorträge/Workshops
-             - Abend: kleine Technikführung
-             - Grillabend
-             - gegen 2400 Abfahrt zur Übernachtung in die JH Falkenhain
+  - Ankunft am Nachmittag (13.7.), Kennenlernen / Wiedersehen
+  - gegen 2300 Abfahrt zur Übernachtung in die JH Falkenhain
 
-    Sonntag  - Übernachter frühstücken in der JH, danach Abfahrt zur Uni
-             - Vormittag: Weitere Vorträge/Workshops
-             - Mittagessen
-             - Nachmittag/Abend: Abreise
+Samstag:
+
+  - Übernachter frühstücken in der JH, danach Abfahrt zur Uni
+  - Vormittag: kurze Vorstellung der teilnehmenden Netze
+    und Beginn der Vorträge/Workshops
+  - Mittagessen
+  - Nachmittag: Vorträge/Workshops
+  - Abend: kleine Technikführung
+  - Grillabend
+  - gegen 2400 Abfahrt zur Übernachtung in die JH Falkenhain
+
+Sonntag :
+
+  - Übernachter frühstücken in der JH, danach Abfahrt zur Uni
+  - Vormittag: Weitere Vorträge/Workshops
+  - Mittagessen
+  - Nachmittag/Abend: Abreise
 
 Für Ethernet und WLAN in den Vortragsräumen wird gesorgt.
-
-------------------------------------------------------------------------
-
-### Bildergalerie
-
-![bilder](/gallery>/snt/2007/bilder)
