fix snt2008 markdown

--- a/docs/Meetings/snt2008.md
+++ b/docs/Meetings/snt2008.md
@@ -1,26 +1,22 @@
 # SNT 2008, Tübingen (cancelled)
 
-![:snt:logo_snt_2008.png](/snt/logo_snt_2008.png) ( ~~noch~~ nicht mehr
-zu erstellen)\
 Terminfindung: Da sich 2007 die unterschiedlichen Prüfungszeiträume als
 Problem herausgestellt haben, scheint ein Termin im Juni/Juli ungünstig.
 Im Sommer sind viele im Urlaub oder arbeiten, Winter ist
 verkehrstechnisch unberechenbar. Bleibt eigentlich nur spätes Frühjahr
 (April/Mai) oder im Herbst nach dem Ansturm zum Semesterbeginn
-(Oktober/November)\...
+(Oktober/November)...
 
-**\... oder auch gar nicht. Leider hat sich in Tübingen scheint es
+... oder auch gar nicht. Leider hat sich in Tübingen scheint es
 niemand gefunden, der moe_tue bei der Organisation hilft. Damit fällt
-das SNT2008 aus. **
+das SNT2008 aus.
 
-
-### Teilnehmer
+## Teilnehmer
 
 *geplant*
 
--   [Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md)
--   [Chemnitzer StudentenNetz (CSN), Chemnitz](../Networks/chemnitz_csn.md)
--   [Forschungsgemeinschaft elektronische Medien e.V. (FeM),
-    Ilmenau](../Networks/ilmenau_fem.md)
+-   [Mittweidaer CampusNet (MCN), Mittweida]((../Networks/mittweida_mcn.md))
+-   [Chemnitzer StudentenNetz (CSN), Chemnitz]((../Networks/chemnitz_csn.md))
+-   [Forschungsgemeinschaft elektronische Medien e.V. (FeM) Ilmenau](../Networks/ilmenau_fem.md)
 -   [ATekoN e.V., Braunschweig](../Networks/braunschweig_atekon.md)
 -   [Sielnet e.V., Braunschweig](../Networks/braunschweig_sielnet.md)
