add SNT event host

--- a/docs/Meetings/snt2023.md
+++ b/docs/Meetings/snt2023.md
@@ -1,5 +1,6 @@
 # SNT 2023, Dresden
 
+**Host**: [AG DSN](https://www.agdsn.de)
 **Date**: 31.08.2023-03.09.2023
 
 ------------------------------------------------------------------------
