--- a/docs/Meetings/snt2004.md
+++ b/docs/Meetings/snt2004.md
@@ -7,5 +7,5 @@ statt.
 
 * [Chemnitzer StudentenNetz](../Networks/chemnitz_csn.md)
 * [Forschungsgemeinschaft elektronische Medien](../Networks/ilmenau_fem.md)
-* [Mitweidaer CampusNet](../Networks/mitweida_mcn.md)
+* [Mitweidaer CampusNet](../Networks/mittweida_mcn.md)
 * [StuNet Freiberg](../Networks/freiberg_sfg.md)
