--- a/docs/Meetings/snt2008.md
+++ b/docs/Meetings/snt2008.md
@@ -13,21 +13,14 @@ verkehrstechnisch unberechenbar. Bleibt eigentlich nur spätes Frühjahr
 niemand gefunden, der moe_tue bei der Organisation hilft. Damit fällt
 das SNT2008 aus. **
 
-**-\>[Diskussionen](/talk/SNT/SNT2008)**\
 
 ### Teilnehmer
 
 *geplant*
 
--   [Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)
--   [Chemnitzer StudentenNetz (CSN), Chemnitz](/studnetze/csn)
+-   [Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md)
+-   [Chemnitzer StudentenNetz (CSN), Chemnitz](../Networks/chemnitz_csn.md)
 -   [Forschungsgemeinschaft elektronische Medien e.V. (FeM),
-    Ilmenau](/studnetze/fem)
--   [ATekoN e.V., Braunschweig](/studnetze/atekon)
--   [Sielnet e.V., Braunschweig](/studnetze/sielnet)
-
-### Zeitplan
-
-------------------------------------------------------------------------
-
-### Bildergalerie
+    Ilmenau](../Networks/ilmenau_fem.md)
+-   [ATekoN e.V., Braunschweig](../Networks/braunschweig_atekon.md)
+-   [Sielnet e.V., Braunschweig](../Networks/braunschweig_sielnet.md)
