--- a/docs/Meetings/snt2009.md
+++ b/docs/Meetings/snt2009.md
@@ -5,15 +5,12 @@
 -   Termin: 06./07.08.2009
 -   Austragungsort: Tübingen
 
-**-\>[Diskussionen](/talk/SNT/SNT2009)**\
-
 ### Teilnehmer
 
--   [Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)
--   [Forschungsgemeinschaft elektronische Medien e.V. (FeM),
-    Ilmenau](/studnetze/fem)
--   [Selfnet e.V., Stuttgart](/studnetze/selfnet)
--   [Chemnitzer StudentenNetz (CSN), Chemnitz](/studnetze/csn)
+-   [Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md)
+-   [Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](../Networks/ilmenau_fem.md)
+-   [Selfnet e.V., Stuttgart](../Networks/stuttgart_selfnet.md)
+-   [Chemnitzer StudentenNetz (CSN), Chemnitz](../Networks/chemnitz_csn.md)
 
 ### Zeitplan
 
@@ -51,6 +48,4 @@
 
 -   Abreise
 
-------------------------------------------------------------------------
 
-### Bildergalerie
