--- a/docs/Meetings/snt2010.md
+++ b/docs/Meetings/snt2010.md
@@ -7,22 +7,20 @@
 -   Austragungsort: Dresden
 -   Termin: 02.-04. September
 
-**-\>[Diskussionen](/talk/SNT/SNT2010)**\
-==== Teilnehmer ====
+### Teilnehmer
 
-  ----------------------------------------------------------------------------------- --------------- ------------------ -------------------------- -------------
-                                                                                      26.-28.August   02.-04.September   gemeldete Teilnehmerzahl   bis Sonntag
-                                Studentenwerk Darmstadt                               **nein**        möglich            0                          \-
-   [Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](/studnetze/fem)  möglich         möglich            3                          \-
-               [Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)               möglich         möglich            7 (5 Übernachtungen)       7/5
-                   [SielNet e.V., Braunschweig](/studnetze/sielnet)                   möglich         möglich            2                          
-                                 Sybuca GmbH, Hamburg                                 **nein**        möglich            1                          1
-                                   Selfnet Stuttgart                                                                     4                          3
-                                          CSN                                                                            2                          
-                                   WH-Netz Stuttgart                                                                     2                          \-
-                                       Tübingen                                                                          3                          
-                    [Atekon e.V., Braunschweig](/studnetze/atekon)                                                       1                          
-  ----------------------------------------------------------------------------------- --------------- ------------------ -------------------------- -------------
+Netzwerk                                                                                      | 26.-28.August | 02.-04.September |  gemeldete Teilnehmerzahl | bis Sonntag
+----------------------------------------------------------------------------------------------|---------------|------------------|---------------------------|-------------
+Studentenwerk Darmstadt                                                                       | **nein**      | möglich          |  0                        | \-
+[Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](../Networks/ilmenau_fem.md) | möglich       | möglich          |  3                        | \-
+[Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md)                        | möglich       | möglich          |  7 (5 Übernachtungen)     | 7/5
+[SielNet e.V., Braunschweig](../Networks/braunschweig_sielnet.md)                             | möglich       | möglich          |  2                        | 
+Sybuca GmbH, Hamburg                                                                          | **nein**      | möglich          |  1                        | 1
+Selfnet Stuttgart                                                                             |               |                  |  4                        | 3
+CSN                                                                                           |               |                  |  2                        | 
+WH-Netz Stuttgart                                                                             |               |                  |  2                        | \-
+Tübingen                                                                                      |               |                  |  3                        | 
+[Atekon e.V., Braunschweig](../Networks/braunschweig_atekon.md)                               |               |                  |  1                        | 
 
 ### Vorträge / Themenvorschläge
 
