--- a/docs/Meetings/snt2011.md
+++ b/docs/Meetings/snt2011.md
@@ -6,25 +6,20 @@
 -   Termin: 25.-28. August 2011 *([Ergebnis
     Terminumfrage](http://doodle.com/k5p99zkcaa7y93na))*
 
-**-\>[Diskussionen](/talk/SNT/SNT2011)**\
-\
-
 ### Teilnehmer
 
-  ----------------------------------------------------------------------------------- --------------------------
-                                                                                      gemeldete Teilnehmerzahl
-                     [Selfnet e.V., Stuttgart](/studnetze/selfnet)                    ?
-                                   WH-Netz Stuttgart                                  ?
-               [Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)               4
-                                        AG DSN                                        5
-                        Studentenwohnheim St. Peter in Nürnberg                       3
-                                    StuStaNet e.V.                                    2
-                                Studentenwerk Tübingen                                1
-              [Chemnitzer StudentenNetz (CSN), Chemnitz](/studnetze/csn)              2
-   [Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](/studnetze/fem)  4
-  ----------------------------------------------------------------------------------- --------------------------
+Netzwerk                                                                                       | gemeldete Teilnehmerzahl
+-----------------------------------------------------------------------------------------------|--------------------------
+                 [Selfnet e.V., Stuttgart](../Networks/stuttgart_selfnet.md)                   | ?
+                               WH-Netz Stuttgart                                               | ?
+           [Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md)              | 4
+                                    AG DSN                                                     | 5
+                    Studentenwohnheim St. Peter in Nürnberg                                    | 3
+                                StuStaNet e.V.                                                 | 2
+                            Studentenwerk Tübingen                                             | 1
+          [Chemnitzer StudentenNetz (CSN), Chemnitz](../Networks/chemnitz_csn.md)              | 2
+[Forschungsgemeinschaft elektronische Medien e.V. (FeM), Ilmenau](../Networks/ilmenau_fem.md)  | 4
 
-\
 
 ### Zeitplan
 
@@ -46,8 +41,6 @@
                      12:00 Abreise                                 
   ------------ ------------------------- ------------------------- -------------------------
 
-\
-
 ### Vorträge
 
 -   Datenschutz
@@ -55,8 +48,6 @@
 -   IPv6 im [BelWü](http://www.belwue.de/)
 -   shack - [stuttgart hackerspace](http://shackspace.de/)
 -   Vorstellung der Netze
-
-\
 
 ### Bildergalerie
 
