--- a/docs/Meetings/snt2006.md
+++ b/docs/Meetings/snt2006.md
@@ -11,16 +11,16 @@ Anmeldung zur Mailingliste:
 ## Teilnehmer
 
 -   [Forschungsgemeinschaft elektronische Medien e.V.,
-    Ilmenau](/studnetze/fem) (3 Teilnehmer)
--   [ATekoN e.V., Braunschweig](/studnetze/atekon)
--   [Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn) (3
+    Ilmenau](../Networks/ilmenau_fem.md) (3 Teilnehmer)
+-   [ATekoN e.V., Braunschweig](../Networks/braunschweig_atekon.md)
+-   [Mittweidaer CampusNet (MCN), Mittweida](../Networks/mittweida_mcn.md) (3
     Teilnehmer)
 -   Netzwerk Blauer Kamp, Hildesheim (2 Teilnehmer)
--   [42network, Oldenburg](/studnetze/ftn) (2 Teilnehmer)
--   [Chemnitzer StudentenNetz (CSN), Chemnitz](/studnetze/csn) (6
+-   [42network, Oldenburg](../Networks/oldenburg_ftn.md) (2 Teilnehmer)
+-   [Chemnitzer StudentenNetz (CSN), Chemnitz](../Networks/chemnitz_csn.md) (6
     Teilnehmer)
 -   Netz-AK des Stuwe Tübingen (2 Teilnehmer)
--   [Sybuca GmbH, Hamburg](/studnetze/sybuca) (1 Teilnehmer)
+-   [Sybuca GmbH, Hamburg](../Networks/hamburg_sybuca.md) (1 Teilnehmer)
 -   SielNet e.V., Braunschweig (2 Teilnehmer)
 -   Wohnheimsnetze Clausthal (3 Teilnehmer)
 
