bring SNT2023 information up to date

--- a/docs/meetings/snt2023.md
+++ b/docs/meetings/snt2023.md
@@ -1,11 +1,11 @@
 # SNT 2023, Dresden
 
 **Host**: [AG DSN](https://www.agdsn.de)
+
 **Date**: 31.08.2023-03.09.2023
 
-------------------------------------------------------------------------
-
-**Location**: Tusculum, August-Bebel-Str. 12, 01219 Dresden.
+## Location
+Tusculum, August-Bebel-Str. 12, 01219 Dresden.
 
 Map of relevant area: <http://u.osmfr.org/m/935392/>
 
@@ -17,31 +17,23 @@ Location Guide:
 -   APB: Nöthnitzer Str. 46
 -   Alte Mensa: Mommsenstraße 13
 
-------------------------------------------------------------------------
+### Arrival by public transport
 
-**Arrival by public transport**: Leave the Dresden main station
+Leave the Dresden main station
 northbound and cross the tram lines, then head to the right in between
 buildings to reach the tram station "Hauptbahnhof Nord". From there you
 take the tram line 11 to "Zschertnitz" and get off at "Strehlener
 Platz". From there it is only a 5-minute walk to the SNT location.
 
-------------------------------------------------------------------------
+## Attendee cloud with pictures and presentation slides
 
-**Tickets for Friday**
+<https://agdsn.de/cloud/s/zm6MosLHbgnFi7y>
 
-<https://snt.agdsn.de/friday/>
+File Drop to cloud: <https://agdsn.de/cloud/s/d2LNGWBiJ8rQFCE>
 
-------------------------------------------------------------------------
+Password: Same as Wifi name at SNT 
 
-**Attendee cloud with pictures and presentation slides**
-
-<https://agdsn.de/cloud/s/7tP6FxBSmwfYRHc>
-
-Password: Same as Wifi name at SNT
-
-------------------------------------------------------------------------
-
-**FAQ**
+## FAQ
 
 -   As soon as you arrive at the Tusculum registration desk, you get a
     public transportation ticket for the duration of the SNT. Yes, all
@@ -54,10 +46,8 @@ Password: Same as Wifi name at SNT
     just inform us about it so we know you are not missing (or can
     expect you earlier).
 
-------------------------------------------------------------------------
-
-**Schedule:** ![](/snt/snt_programm_general.pdf){.align-center}
-![](/snt/snt_programm_friday_detailled.pdf){.align-center}
+## Schedule
+[Programm General](/meetings/snt2023_programm_general.pdf) | [Programm Friday (detailled)](/meetings/snt2023_programm_friday_detailled.pdf)
 
 Thursday 31.08.2023:
 
@@ -110,10 +100,7 @@ Sunday 03.09.2023:
     can accompany us to the local public swimming pool for some
     relaxation, so pack your swimming trunks 😊
 
-------------------------------------------------------------------------
-
-**Participating student networks and number of registered
-participants:**
+## Participating student networks and number of registered participant
 
 -   Chemnitzer StudentenNetz: 4
 -   FeM (Ilmenau): 6
