Fix formatting SNT2010

--- a/docs/meetings/snt2010.md
+++ b/docs/meetings/snt2010.md
@@ -24,76 +24,58 @@ Tübingen                                                                       
 
 ### Vorträge / Themenvorschläge
 
-*Was brennt aktuell \"unter den Nägeln\", wer möchte einen Vortrag
-beisteuern? Bitte auch die Mailingliste nutzen.*
+Was brennt aktuell "unter den Nägeln", wer möchte einen Vortrag
+beisteuern? Bitte auch die Mailingliste nutzen.
 
-SkyTouch \[MCN\]: Für uns ist eines der wichtigsten Themen die
+SkyTouch [MCN]: Für uns ist eines der wichtigsten Themen die
 **Rekrutierung/Integration von neuen Mitstreitern**. Gerade durch die
 kürzeren Bachelorstudiengänge ist die durchschnittliche Bleibezeit stark
 gesunken. Ein Austausch von Ideen und eigenen Erfahrungen mit
 zusätzlichen Maßnahmen wäre für uns (und vermutlich auch noch andere
-kleinere Netze) sehr interessant.\
+kleinere Netze) sehr interessant.
+
 Ein weiterer Punkt ist der Umgang mit neuen Nutzererwartungen -
 **überall online**. Wie geht man mit der immer stärkeren Durchdringung
 mobiler Datenverträge (v.a. im Hinblick auf LTE und dessen
 Nachfolgestandards) um? Besteht langfristig überhaupt noch ein Bedarf an
-Wohnheimvernetzung?\
+Wohnheimvernetzung?
+
 Gerade zum ersten Punkt könnte ich auch einen Vortrag beisteuern, wie
-wir (MCN) das versuchen - wäre nur die Frage, ob unsere \"neuen\"
+wir (MCN) das versuchen - wäre nur die Frage, ob unsere "neuen"
 Ideen/Versuche gerade von größeren Netzen nicht schon länger eingesetzt
-werden\...
+werden...
 
 ### Zeitplan
 
-*Vorläufiger Ablaufplan, Änderungen vorbehalten*
+Vorläufiger Ablaufplan, Änderungen vorbehalten
 
-**Donnerstag, 02.09.**
+#### Donnerstag, 02.09.
 
 Anreise ab 16 Uhr
 
-**Freitag, 03.09.**
+#### Freitag, 03.09.
 
-  ---------------------------------------------------------------------------------------------------
-  Zeit            Programmpunkt                                                          Ort
-  --------------- ---------------------------------------------------------------------- ------------
-  09:00 - 09:30   Begrüßung, (Vorstellung der Dresdner Netzstruktur)                     POT 106
+Zeit           | Programmpunkt                                                         | Ort
+---------------|-----------------------------------------------------------------------|------------
+09:00 - 09:30  | Begrüßung, (Vorstellung der Dresdner Netzstruktur)                    | POT 106
+09:30 - 10:45  | Beitrag / Diskussion DFN                                              | POT 106
+11:00 - 12:15  | (Vorstellung der Dresdner Netzstruktur) Erfahrungsaustausch (z.B. Mitgliederwerbung), Beiträge anderer Studentennetze | POT 106
+12:15 - 13:30  | *Mittagessen*                                                         | Alte Mensa
+13:30 - 14:45  | Prof. Schill: Rückblick auf die Gründung des Dresnder Studentennetz Vorstellung WLAN: Cisco und ZIH | POT 106
+15:15 - 16:30  | Vorstellung des Frühwarnsystems der TU Dresden durch das ZIH Diskussion Vorgehensweise bei Auffälligkeiten | POT 106
+17:00 - 18:00  | Führung durch das Hochleistungsrechenzentrum                          | TRE/HRSK
+ab 19:00       | Abendessen, Feier 15 Jahre AG DSN                                     | Alte Mensa
 
-  09:30 - 10:45   Beitrag / Diskussion DFN                                               POT 106
+#### Samstag, 04.09.
 
-  11:00 - 12:15   (Vorstellung der Dresdner Netzstruktur)\                               POT 106
-                  Erfahrungsaustausch (z.B. Mitgliederwerbung)\                          
-                  Beiträge anderer Studentennetze                                        
-
-  12:15 - 13:30   *Mittagessen*                                                          Alte Mensa
-
-  13:30 - 14:45   Prof. Schill: Rückblick auf die Gründung des Dresnder Studentennetz\   POT 106
-                  Vorstellung WLAN: Cisco und ZIH                                        
-
-  15:15 - 16:30   Vorstellung des Frühwarnsystems der TU Dresden durch das ZIH\          POT 106
-                  Diskussion Vorgehensweise bei Auffälligkeiten                          
-
-  17:00 - 18:00   Führung durch das Hochleistungsrechenzentrum                           TRE/HRSK
-
-  ab 19:00        Abendessen, Feier 15 Jahre AG DSN                                      Alte Mensa
-  ---------------------------------------------------------------------------------------------------
-
-**Samstag, 04.09.**
-
-  --------------------------------------------------------------------------------
-  Zeit            Programmpunkt
-  --------------- ----------------------------------------------------------------
-  09:30 - 11:00   Geführte Tour durch die Dresdner Altstadt auf Conference Bikes
-
-  12:00 - 13:00   *Mittagessen*
-
-  13:00 - 14:00   Erfahrungsaustausch (z.B. Mitgliederwerbung)\
-                  Beiträge anderer Studentennetze
-
-  14:30 - 15:30   Dr. Köpsell: Datenschutz im Studentennetz
-  --------------------------------------------------------------------------------
+Zeit           | Programmpunkt
+---------------|----------------------------------------------------------------
+09:30 - 11:00  | Geführte Tour durch die Dresdner Altstadt auf Conference Bikes
+12:00 - 13:00  | *Mittagessen*
+13:00 - 14:00  | Erfahrungsaustausch (z.B. Mitgliederwerbung), Beiträge anderer Studentennetze
+14:30 - 15:30  | Dr. Köpsell: Datenschutz im Studentennetz
 
 Es wäre schön wenn sich wieder ein oder zwei kurze Vorträge zu aktuellen
 Projekte der verschiedenen Studentennetze finden. Bei Interesse bitte
 kurze Information per eMail :)
 
-### Bildergalerie
