Fix formatting SNT2011

--- a/docs/meetings/snt2011.md
+++ b/docs/meetings/snt2011.md
@@ -3,8 +3,7 @@
 ![:snt:logo_snt_2011.png (noch zu erstellen)](/snt/logo_snt_2011.png)\
 
 -   Austragungsort: Stuttgart
--   Termin: 25.-28. August 2011 *([Ergebnis
-    Terminumfrage](http://doodle.com/k5p99zkcaa7y93na))*
+-   Termin: 25.-28. August 2011 ([Ergebnis Terminumfrage](http://doodle.com/k5p99zkcaa7y93na))
 
 ### Teilnehmer
 
@@ -23,23 +22,18 @@ Netzwerk                                                                        
 
 ### Zeitplan
 
-  ------------ ------------------------- ------------------------- -------------------------
-  Tag                  Vormittag                Nachmittag                   Abend
-
-  Donnerstag                                   16:00 Anreise            18:00 Unithekle
-
-  Freitag          09:00 Frühstück\       15:00 Besichtigung HLRS       18:00 Vorträge\
-                    10:00 Vorträge\                                      20:00 Grillen
-                   12:00 Mittagessen                               
-
-  Samstag          09:00 Frühstück\        15:00 Bunkerführung\        20:00 Abendessen\
-                    10:00 Vorträge\       17:30 Max-Kade-Wohnheim   21:00 S\'Hackspace LHC2
-                   12:00 Mittagessen                               
-
-  Sonntag          09:00 Frühstück\                                
-                10:00 freie Gestaltung\                            
-                     12:00 Abreise                                 
-  ------------ ------------------------- ------------------------- -------------------------
+Tag        |          Vormittag       |         Nachmittag       |            Abend
+-----------|--------------------------|--------------------------|--------------------------
+Donnerstag |                          | 16:00 Anreise            | 18:00 Unithekle
+Freitag    | 09:00 Frühstück          | 15:00 Besichtigung HLRS  | 18:00 Vorträge 
+           | 10:00 Vorträge           |                          | 20:00 Grillen
+           | 12:00 Mittagessen        |                          |
+Samstag    | 09:00 Frühstück          | 15:00 Bunkerführung      | 20:00 Abendessen 
+           | 10:00 Vorträge           | 17:30 Max-Kade-Wohnheim  | 21:00 S'Hackspace LHC2
+           | 12:00 Mittagessen        |                          |
+Sonntag    | 09:00 Frühstück          |                          |  
+           | 10:00 freie Gestaltung   |                          |
+           | 12:00 Abreise            |                          |
 
 ### Vorträge
 
@@ -51,5 +45,5 @@ Netzwerk                                                                        
 
 ### Bildergalerie
 
-Bilder liegen auf dem FTP-Server studentennetze.de:2121, die
+Bilder liegen auf dem FTP-Server `studentennetze.de:2121`, die
 Zugangsdaten standen auf der Tafel im NOC 8-)
