--- a/docs/meetings/snt2013.md
+++ b/docs/meetings/snt2013.md
@@ -11,64 +11,51 @@
 -   Veranstalter: Spacepub e.V., Walter-Meckauer-Str. 12-30/Sophienstr.
     12-16, 90478 Nürnberg
 
-**-\> [Diskussionen](/talk/SNT/SNT2013)**
-
 ### Teilnehmer
 
-*Anmelden vorbei*
-
-~~Bitte im [DFN
-Terminplaner](https://terminplaner.dfn.de/foodle.php?id=195rtd2vhxa32xs1)
-melden.~~
-
-  Name \[Verein\]                   Comment                        19.20.21.   20.21.   Keine Uebernachtung
-  --------------------------------- ------------------------------ ----------- -------- ---------------------
-  2 Leute \[Dresden\]                                              x                    
-  3 Leute \[FeM\]                   3                              x                    
-  Maxi \[StuStaNet e.V.\]                                          x                    
-  Franzl \[StuStaNet e.V.\]                                        x                    
-  MarkusT \[StuStaNet e.V.\]        Veggie                         x                    
-  Matthias \[StuStaNet e.V.\]       Veggie                         x                    
-  ~~Markus K \[StuStaNet e.V.\]~~   abgesagt                                            x
-  Max \[Sieglitzhof\]                                                          ~~x~~    
-  Konrad \[MCN\]                    braucht kein bett                                   x
-  SkyTouch \[MCN\]                  unter Vorbehalt; erst ab 20.                        x
-  Tobi90 \[MCN\]                                                   x                    
-  Siggi \[MCN\]                                                    x                    
-  Markus \[Selfnet\]                                               x                    
-  9er \[Selfnet\]                                                  x                    
-  Dirkmb \[Selfnet\]                                               x                    
-  Arne \[Selfnet\]                                                                      
-  Hannes/qybl \[Selfnet\]                                          x                    
-  Tillmann/flacs \[Selfnet\]                                       x                    
+Name [Verein]                  | Comment                       | 19.20.21.  | 20.21.  | Keine Uebernachtung
+-------------------------------|-------------------------------|------------|---------|-----------------------
+2 Leute [Dresden]              |                               | x          |         | 
+3 Leute [FeM]                  | 3                             | x          |         | 
+Maxi [StuStaNet e.V.]          |                               | x          |         | 
+Franzl [StuStaNet e.V.]        |                               | x          |         | 
+MarkusT [StuStaNet e.V.]       | Veggie                        | x          |         | 
+Matthias [StuStaNet e.V.]      | Veggie                        | x          |         | 
+Markus K [StuStaNet e.V.]      | abgesagt                      |            |         | x
+Max [Sieglitzhof]              |                               |            | x       | 
+Konrad [MCN]                   | braucht kein bett             |            |         | x
+SkyTouch [MCN]                 | unter Vorbehalt; erst ab 20.  |            |         | x
+Tobi90 [MCN]                   |                               | x          |         | 
+Siggi [MCN]                    |                               | x          |         | 
+Markus [Selfnet]               |                               | x          |         | 
+9er [Selfnet]                  |                               | x          |         | 
+Dirkmb [Selfnet]               |                               | x          |         | 
+Arne [Selfnet]                 |                               |            |         | 
+Hannes/qybl [Selfnet]          |                               | x          |         | 
+Tillmann/flacs [Selfnet]       |                               | x          |         | 
 
 **Stand 19.09.2013**:
 
--   Angemeldet: 19
--   Uebernachtungen:
-
-```{=html}
-<!-- -->
-```
-       * 19-21.: 16
-       * <del>20-21.: 1</del>
+- Angemeldet: 19
+- Uebernachtungen:
+  - 19-21.: 16
 
 Bemerkung: Haben die Gruppen in 3 6er-Zimmer aufgeteilt. 2
 Puffer-Plaetze vorhanden
 
 ### Zeitplan
 
-                      Donnerstag                 Freitag                        Samstag              Sonntag
-  ------------ ------------------------ -------------------------- --------------------------------- -----------------------
-                                          **Frühstück** (Hostel)                                     
-   Vormittag                              Vortrag des RRZE (TH)               Tor Project            gemütl. Beisammensein
-                                         POF-AC Besichtigung (TH)       Netze stellen sich vor       
-                                         **Mittagessen** (Mensa)              WLAN (FeM)             Abreise
-   Nachmittag                                 Rechenzentrum         **Mittagessen** (Chili \@Space)  
-                Ankunft Hostel (16:30)                                         Hamnet(?)             
-     Abend                                                           Felsengänge Nürnberg (15:45)    
-                                                                        Nürnberger Altstadtfest      
-                 Grillen im Spacepub        Pizza im Spacepub          Landbierparadies Nürnberg     
+Tag          |       Donnerstag        |         Freitag           |             Samstag             | Sonntag
+------------ |-------------------------|---------------------------|---------------------------------|-----------------------
+             |                         |  **Frühstück** (Hostel)   |                                 | 
+ Vormittag   |                         |  Vortrag des RRZE (TH)    |           Tor Project           | gemütl. Beisammensein
+             |                         | POF-AC Besichtigung (TH)  |     Netze stellen sich vor      | 
+             |                         | **Mittagessen** (Mensa)   |           WLAN (FeM)            | Abreise
+ Nachmittag  |                         |      Rechenzentrum        | **Mittagessen** (Chili \@Space) | 
+             | Ankunft Hostel (16:30)  |                           |            Hamnet(?)            | 
+   Abend     |                         |                           |  Felsengänge Nürnberg (15:45)   | 
+             |                         |                           |     Nürnberger Altstadtfest     | 
+             |  Grillen im Spacepub    |    Pizza im Spacepub      |    Landbierparadies Nürnberg    | 
 
 Vorträge sind nur zum Teil fix. Kann sich noch das ein oder andere
 Verändern.
@@ -89,5 +76,3 @@ Aktuelle Vorträge:
 Eine Bitte, wenn jemand Vorträge hat und diesen gerne halten würde -
 kurze Nachricht per Jabber (rasko@jabber.ccc.de) oder E-Mail:
 admin-team@spacepub.de
-
-### Bildergalerie
