Format markdown for SNT2014 and SNT2015

--- a/docs/meetings/snt2014.md
+++ b/docs/meetings/snt2014.md
@@ -5,37 +5,35 @@ query="?450"}
 
 -   Austragungsort: München
 -   Termin: 11.09. bis 14.09.2014
--   Übernachtung: *wahrscheinlich 2 Möglichkeiten: Wohnheim oder Hostel,
-    details folgen*
+-   Übernachtung: wahrscheinlich 2 Möglichkeiten: Wohnheim oder Hostel,
+    details folgen
 -   Veranstalter: [StuStanet e. V.](/Studnetze/StuStaNet),
     Hans-Leipelt-Straße 7, 80805 München
 
-**-\> [Diskussionen](/talk/SNT/SNT2014)**
-
 ### Teilnehmer
 
-  Name                                                           gemeldete Teilnehmerzahl
-  -------------------------------------------------------------- --------------------------
-  [St-Peter Nürnberg](/studnetze/nuernberg-st-peter)             4
-  [SielNet e. V., Braunscheig](/studnetze/sielnet)               3
-  [Studentennetz Freiberg](/studnetze/sfg)                       3
-  [Selfnet e.V.&WH-Netz e.V.](/studnetze/selfnet)                6
-  ~~[Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)~~   ~~1~~
-  [FeM](/studnetze/fem)                                          3
-  SNT-Archiv&Chronik                                             1
-  [AG DSN](/studnetze/agdsn)                                     5
+Name                                                          | gemeldete Teilnehmerzahl
+--------------------------------------------------------------|--------------------------
+[St-Peter Nürnberg](/studnetze/nuernberg-st-peter)            | 4
+[SielNet e. V., Braunscheig](/studnetze/sielnet)              | 3
+[Studentennetz Freiberg](/studnetze/sfg)                      | 3
+[Selfnet e.V.&WH-Netz e.V.](/studnetze/selfnet)               | 6
+[Mittweidaer CampusNet (MCN), Mittweida](/studnetze/mcn)      | 1
+[FeM](/studnetze/fem)                                         | 3
+SNT-Archiv&Chronik                                            | 1
+[AG DSN](/studnetze/agdsn)                                    | 5
 
 ### Zeitplan (vorläufig)
 
-                       Donnerstag                     Freitag                        Samstag           Sonntag
-  ------------ -------------------------- -------------------------------- --------------------------- -----------------------
-                                                   **Frühstück**                                       
-   Vormittag                                   10:00 Führung SuperMUC         9:30 Deutsches Museum    gemütl. Beisammensein
-                                                  **Mittagessen**                                      Abreise
-   Nachmittag           Ankunft            die Wohnheime stellen sich vor     15:00 Brauereiführung    
-                Führung durch die StuSta              Vorträge                      Vorträge           
-     Abend              Grillen                Abendessen (TribüHne)        Abendessen (Potschamperl)  
-                 gemütl. Beisammensein         gemütl. Beisammensein          gemütl. Beisammensein    
+Tag         |         Donnerstag         |            Freitag              |          Samstag          | Sonntag
+------------|-------------------------- -|---------------------------------|---------------------------|-----------------------
+            |                            |         **Frühstück**           |                           | 
+Vormittag   |                            |     10:00 Führung SuperMUC      |   9:30 Deutsches Museum   | gemütl. Beisammensein
+            |                            |        **Mittagessen**          |                           | Abreise
+Nachmittag  |          Ankunft           | die Wohnheime stellen sich vor  |   15:00 Brauereiführung   | 
+            |  Führung durch die StuSta  |            Vorträge             |         Vorträge          | 
+ Abend      |          Grillen           |     Abendessen (TribüHne)       | Abendessen (Potschamperl) | 
+            |   gemütl. Beisammensein    |     gemütl. Beisammensein       |   gemütl. Beisammensein   | 
 
 Bei Fragen email an snt2014-orga@lists.stusta.mhn.de oder via jabber
 direkt fragen: markus.kaindl@stusta.mhn.de oder *tobedone*
@@ -66,10 +64,3 @@ Unterkunft im Hostel (haus international)
 
 -   <http://osm.org/go/0JAf1FkOM--?m=&node=2194227509>
 -   <http://www.haus-international.de/de/>
-
-### Bildergalerie
-
-FIXME: Die Gallerie verursacht einen Fehler, so dass die Wiki Seite als
-nicht existent markiert wird und somit nicht angezezeigt!
-
-![](/snt/2014/gruppenfoto.jpg){width="600" query="?600"}
