--- a/docs/meetings/snt2015.md
+++ b/docs/meetings/snt2015.md
@@ -8,37 +8,37 @@ query="?450"}
 -   Termin: 27.-30.08.2015
 -   Übernachtung: In den Wohnheimen (Zimmer und Matrazenlager je nach
     Teilnehmerzahl)
--   Veranstalter: [Studentennetz Freiberg](/studnetze/sfg)
+-   Veranstalter: [Studentennetz Freiberg](/networks/gfreiberg_sfg.md)
 
 ### Teilnehmer
 
-  Name                                                         Teilnehmerzahl
-  ------------------------------------------------------------ ----------------
-  [StuStaNet e.V.](/studnetze/stustanet)                       7
-  [Selfnet e.V.&WH-Netz e.V.](/studnetze/selfnet)              5
-  [FeM](/studnetze/fem)                                        3
-  SNT-Archiv&Chronik                                           1
-  [AG DSN](/studnetze/agdsn)                                   7
-  [Mittweidaer CampusNet](/studnetze/mcn)                      2
-  [Rommelwood e.V. Erlangen-Nürnberg](/studnetze/rommelwood)   3
-  [Netz-AK Tübingen](/studnetze/netzak_tuebingen)              2
-  [SielNet e. V., Braunscheig](/studnetze/sielnet)             1
-  [Kellnerweg Göttingen](/studnetze/kellnerweg-goettingen)     1
-  [Studentennetz Freiberg](/studnetze/sfg)                     8
+Name                                                        | Teilnehmerzahl
+------------------------------------------------------------|-----------------
+[StuStaNet e.V.](networks/stustanet.md)                      | 7
+[Selfnet e.V.&WH-Netz e.V.](networks/stuttgart_selfnet.md)             | 5
+[FeM](networks/ilmenau_fem.md)                                       | 3
+SNT-Archiv&Chronik                                          | 1
+[AG DSN](networks/dresden_agdsn.md)                                  | 7
+[Mittweidaer CampusNet](networks/mittweida_mcn.md)                     | 2
+[Rommelwood e.V. Erlangen-Nürnberg](networks/nuremberg_rommelwood.md)  | 3
+[Netz-AK Tübingen](networks/tuebingen_netzak.md)             | 2
+[SielNet e. V., Braunschweig](networks/braunschweig_sielnet.md)            | 1
+[Kellnerweg Göttingen](networks/goettingen_kellnerweg.md)    | 1
+[Studentennetz Freiberg](networks/freiberg_sfg.md)                    | 8
 
 -   Insgesamt anwesend: **40**
 
 ### Zeitplan
 
-                     Donnerstag                                                               Freitag                                                                                     Samstag                              Sonntag
-  ------------ ----------------------- ---------------------------------------------------------------------------------------------------------------------- ---------------------------------------------------------------- -----------------------
-                                                                                     **Frühstück (Cafeteria)**                                                                         **Frühstück**                           **Frühstück**
-   Vormittag                                                      Führung [Reiche Zeche](http://www.besucherbergwerk-freiberg.de/)                                                        Vorträge                             gemütl. Beisammensein
-                                        **Mittagessen: [Mensa](https://studentenwerk-freiberg.de/index.php?id=30&tx_swfgspeiseplan_speiseplan2[week]=this)**                         **Subway/Hotdogs**                        Abreise
-   Nachmittag          Ankunft                                  [CAVE](http://tu-freiberg.de/fakult1/organisation/ausstattung/cave)                              [STUN@lympics](https://github.com/studnetze/stunetlympics)    
-                                                                                              Vorträge                                                                                                                         
-     Abend           **Grillen**                                                     **Abendessen (Catering)**                                                 **Abendessen: [Mythos](http://www.restaurant-bar-mythos.de/)**  
-                gemütl. Beisammensein                                                        Quizrunde                                                                       PPT-Karaoke/gemütl. Beisammensein                 
+Tag           |       Donnerstag      |                                                         Freitag                                                         |                            Samstag                             | Sonntag
+  ------------|-----------------------|-------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|----------------------
+              |                       |                                                **Frühstück (Cafeteria)**                                                |                         **Frühstück**                          | **Frühstück**
+   Vormittag  |                       |                             Führung [Reiche Zeche](http://www.besucherbergwerk-freiberg.de/)                            |                            Vorträge                            | gemütl. Beisammensein
+              |                       |   **Mittagessen: [Mensa](https://studentenwerk-freiberg.de/index.php?id=30&tx_swfgspeiseplan_speiseplan2[week]=this)**  |                       **Subway/Hotdogs**                       | Abreise
+   Nachmittag |         Ankunft       |                           [CAVE](http://tu-freiberg.de/fakult1/organisation/ausstattung/cave)                           |   [STUN@lympics](https://github.com/studnetze/stunetlympics)   | 
+              |                       |                                                         Vorträge                                                        |                                                                | 
+     Abend    |       **Grillen**     |                                                **Abendessen (Catering)**                                                | **Abendessen: [Mythos](http://www.restaurant-bar-mythos.de/)** | 
+              |  gemütl. Beisammensein|                                                        Quizrunde                                                        |              PPT-Karaoke/gemütl. Beisammensein                 |
 
 Bei Fragen E-Mail an
 [snt2015@stunet.tu-freiberg.de](snt2015@stunet.tu-freiberg.de) oder per
@@ -67,10 +67,3 @@ Ausgangsort und Treffpunkt ist die neue Mensa
 Unterkunft voraussichtlich in den Wohnheimen Winklerstraße (12-22)
 
 -   <http://www.openstreetmap.org/way/32317708#map=17/50.92515/13.34295>
-
-### Bildergalerie
-
-FIXME: Die Gallerie verursacht einen Fehler, sobald das repariert ist,
-werden die Bilder nachgereicht.
-
-![](/snt/2015/gruppenfoto.jpg){width="600" query="?600"}
