snt24, small fixes 240820

--- a/docs/meetings/snt2024.md
+++ b/docs/meetings/snt2024.md
@@ -40,7 +40,7 @@ Walk 3 minutes to CdK
 
 - We welcome you between 15:00 to 18:00 in Chemnitz at the location of this year's
   SNT, "Club der Kulturen", **CdK**, Thüringer Weg 3.
-- Please see our registration desk and collect your ticket as well as all other
+- Please come by our registration desk and collect your ticket as well as all other
   necessary things.
 - For dinner Pizza will be served and after an introduction each attending network
   can present a short presentation of themselves for 5 minutes.
@@ -75,7 +75,7 @@ Walk 3 minutes to CdK
 - Take a breakfast at the hotel in the morning, check out by yourself.
 - You can depart any time, as you might have a longer journey home.
 - If you have some time left, you can come to CdK once for some feedback opportunity
-  and some closing remarks.
+  and some closing remarks. We have also some packed snacks (Lunchpaket) for your trip home.
 
 ## Participating networks and attendee count
 
