--- a/docs/meetings/snt2024.md
+++ b/docs/meetings/snt2024.md
@@ -88,7 +88,7 @@ Walk 3 minutes to CdK
 - Pod-O-Lee CTU Student Union: 1
 - PCKLUB Jedlíkova 9, Košice, Slovakia: 14
 - PCKLUB Jedlíkova 13, Košice, Slovakia: 6
-- SchlunterNet e.V.: 1
+- SchunterNet e.V.: 1
 - Selfnet: 10
 - Sincoolka (CTU SU): 2
 - StuNet Freiberg: 4
